
--------------------------- To-do -----------------------------
Playthrough notes
- Make managed democracy increase patrol size and spawn amount (maybe a militia?)
todo - hard deadline quality penalty appears to stack with each applied edict?? - test???

Substance abuse
- adjust booze to consume half as much and take 1 cargo/unit
- fix the LP booze not turning the campaign engine exhaust green like it should

Playthrough wants
- aimable depulsor missile consumables
- smoke bomb consumables
- item that, when spaced in a cargo pod, makes patrols that are chasing you go inspect the crate instead (maybe consumable?)
- Consumable temporary comms relay item
- Distillery module for settlements
- Courier Port Option for settlements
- Requisition center RAT settlement plugin
- Consumable item skillshot framework
 - Tracking & visibility anchor missile
 - smoke nade
 - napalm?
 - repulsor (mine?)
- smoke bomb circle around you consumable
- emergency yeet button consumable that yeets you away but reduces burn by -1 until you dock with a market
 - Rework VPCs to use random tiered output system
 - Research project that uses survey data as input

Known Bugs
- Detachments eat crew that is in excess of capacity
- Detachments refuse to move when in other system (??)

Requests
- add a colony buff to automated shipyards (maybe a buff to HI? got item sprites for it anyway)
- Add keyboard shortcuts to all indEvo industry menu points
- Make it so if we kill the artillery station we can convert its husk into a outpost without having to colonize the planet
- Watchtowers buildable in stable loc

Ideas
- optional blacklist TAG for RE and duplication
    - if there's a whitelist and a tagged ship, just allow all except the tagged ships and ignore the whitelist
- "Mimic Hulls", Derelict ships that change into remnant or pirate ambush fleets when approached
- Consumable item that makes your fleet look bigger than is is to NPCs